Fix page overflow

--- a/app/assets/styles/global/_pages.scss
+++ b/app/assets/styles/global/_pages.scss
@@ -7,6 +7,7 @@
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  overflow: hidden;
 }
 
 /* Header
